--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,7 +7,7 @@ output:
 
 
 ## Loading and preprocessing the data
-
+activity <- read.csv(file="./data/activity.csv", head=TRUE, sep=",")
 
 
 ## What is mean total number of steps taken per day?
